# tuxsim

./: configure.ac
config/: tuxsim.mk
projects/tuxsim/: aclocal.m4  configure.ac  main.cpp
projects/tuxsim/branches/tuxsim-allele/src/: common.cpp  common.h  gff.h  hits.cpp  mismatches.cpp  options.cpp  samcompare.cpp  scaffolds.h  sequencing.cpp  tuxsim.cpp
projects/tuxsim/branches/tuxsim-allele/tuxsim.xcodeproj/: project.pbxproj
projects/tuxsim/doc/html/: manual.html
projects/tuxsim/src/: Makefile.am  abundances.cpp  abundances.h  common.cpp  common.h  fragments.cpp  fragments.h  gff.cpp  gtf_tracking.cpp  hits.cpp  hits.h  main.cpp  options.cpp  options.h  samcmp.cpp  samcompare.cpp  scaffolds.cpp  scaffolds.h  sequencing.cpp  sequencing.h  tuxsim-driver.py  tuxsim.cpp
projects/tuxsim/tests/tiny_ref/: ref_genes.gtf  reference.fa  sim.cfg  tiny_test.cfg
projects/tuxsim/tests/unit_tests/: TestHits.h
projects/tuxsim/trunk/: ax_boost_program_options.m4  configure.ac  tuxsim.1
projects/tuxsim/trunk/src/: GHash.hh  common.h  fragments.cpp  gff.h  gtf_tracking.h  hits.cpp  hits.h  indels.cpp  mismatches.h  options.h  scaffolds.h  sequencing.cpp
projects/tuxsim/tuxsim.xcodeproj/: cole.pbxuser  cole.perspectivev3  project.pbxproj
src/: GFaSeqGet.cpp  abundances.cpp  abundances.h  common.cpp  common.h  fragments.h  gff.cpp  gff.h  gtf_tracking.cpp  gtf_tracking.h  hits.cpp  hits.h  indels.h  options.cpp  scaffolds.cpp  sequencing.cpp  sequencing.h  tuxsim.cpp
tests/tiny_ref/: sim.cfg
tests/unit_tests/: TestHits.cpp
(+8 files in other folders)
